# fractal-cut

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: pom.xml
backend/src/main/java/com/puzzlecore/: PuzzleBackendApplication.java
backend/src/main/java/com/puzzlecore/controller/: OrderController.java  PuzzleController.java
backend/src/main/java/com/puzzlecore/model/: Order.java  PuzzleConfig.java  PuzzleOutput.java
backend/src/main/resources/: application.properties
backend/src/main/resources/db/migration/: V1__init.sql
backend/src/main/resources/wasm/: puzzle_core_server.wasm
backend/src/test/java/com/puzzlecore/: PuzzleServiceTest.java
frontend/: .eslintrc.json  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/configurator/: page.tsx
frontend/components/: BorderUpload.tsx  ExportButtons.tsx  PuzzleConfigurator.tsx  PuzzlePreview2D.tsx  PuzzlePreview3D.tsx  PuzzleScene.tsx
frontend/e2e/: isomorphic.spec.ts
frontend/hooks/: useBorderMask.ts  usePuzzleGenerator.ts  usePuzzleWasm.ts
frontend/lib/: flatten.js  plotpath.ts  wasm-types.d.ts
frontend/lib/wasm/: puzzle_core.d.ts  puzzle_core.js  puzzle_core_bg.wasm  puzzle_core_bg.wasm.d.ts
puzzle-core/: Cargo.toml
puzzle-core/src/: arc.rs  diagonal.rs  frame.rs  grid.rs  jigsaw.rs  lib.rs  mask.rs  prng.rs  tile.rs  types.rs
puzzle-core/tests/: svg_parity.rs
puzzle-core/tests/fixtures/: golden_fixtures.json
(+9 files in other folders)
