[package]
name = "puzzle-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
bindgen = ["wasm-bindgen", "js-sys", "console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.121", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
serde_json = "1"
kurbo = "0.11"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
